# notebook-manager.nvim

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml
lua/notebook_manager/: commands.lua  config.lua  core.lua  init.lua  keymaps.lua  utils.lua
lua/notebook_manager/kernel/: manager.lua  menu.lua
lua/notebook_manager/kernel_manager/: kernel.lua
lua/notebook_manager/package_manager/: factory.lua  poetry.lua
lua/notebook_manager/toml/: manager.lua
lua/notebook_manager/toml_parcer/: pyproject.lua  toml.lua
lua/telescope/_extensions/: kernel_manager.lua
