[tool.poetry]
name = "notebook-manager"
version = "0.1.0"
description = "testy"
authors = ["DavidRR-F <david.rosefranklin96@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
